# schedule-appointments

./: .dockerignore  .env.example  .env.test  .gitattributes  .gitignore  CONTRIBUTING.md  DEBUGGING_SLOTS.md  Dockerfile  LICENSE  PHASE_1_PROGRESS.md  README.md  SECURITY.md  alembic.ini  docker-compose.yml  entrypoint.sh  migrate_direct.py  pyproject.toml  pyproject.toml.backup  run_migrations.py  test_onboarding_flow.py
.github/workflows/: ci.yml
docs/: onboarding-flow.md  response-structure.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_whatsapp_to_businesses.py  003_reminders_handoff.py  004_multiple_business_hour_ranges.py  005_optional_professional_user_id.py  006_service_professionals.py
src/: main.py
src/application/appointment/: book_appointment.py  cancel_appointment.py  get_appointment.py  get_available_slots.py  list_appointments.py  reschedule_appointment.py
src/application/business/: create_business.py  delete_business.py  get_business.py  list_businesses.py  update_business.py  update_business_whatsapp.py
src/application/business_hours/: __init__.py  get_business_hours.py  set_business_hours.py  update_day_hours.py
src/application/conversation/: process_inbound_message.py
src/application/identity/: authenticate_user.py  logout.py  refresh_token.py
src/application/notifications/: email_service.py  email_templates.py
src/application/onboarding/: complete_wizard.py  industry_templates.py  verify_email.py  (+1 more)
src/presentation/: dependencies.py  exception_handlers.py  middleware.py
tests/: test_verify_email.py
(+121 files in other folders)
