[project]
name = "agente-citas-backend"
version = "0.1.0"
description = "Backend para bot de agendamiento por WhatsApp"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic[email]",
    "pydantic-settings",
    "sqlalchemy[asyncio]",
    "alembic",
    "asyncpg",
    "argon2-cffi",
    "redis",
    "structlog",
    "python-jose[cryptography]",
    "httpx",
    "anthropic",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
